--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<script src="js/js.js"></script>
 </head>
 <body>
-	<div class="content" id="content">
-		<table id="dynamic" class="table hover" cellspacing="0">
+	<div class="content">
+		<table class="dynamic table hover" cellspacing="0">
 			<tr>
 				<td></td>
 				<td></td>
@@ -33,14 +33,14 @@
 				<td></td>
 			</tr>
 		</table>
-		<div class="button right add_button hover" id="add-column">
+		<div class="button right add_button hover add-column">
 			<span>+</span>
 		</div>
-		<div class="add_button button down hover" id="add-row">
+		<div class="add_button button down hover add-row">
 			<span>+</span>
 		</div>
-		<div id="remove-col" class="remove_button button top hover" style="display:none"><span>-</span></div>
-		<div id="remove-row" class="remove_button button left hover" style="display:none"><span>-</span></div>
+		<div class="remove-col remove_button button top hover" style="display:none"><span>-</span></div>
+		<div class="remove-row remove_button button left hover" style="display:none"><span>-</span></div>
 	</div>
 </body>
 </html>
